net-policy-template.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: within-ws-rule
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project-name: ${project_name}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          project-name: ${project_name}
