withinworkspace-policy-rule.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: withinworkspace-policy-rule
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace.labels.project-name: team-q
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace.labels.project-name: team-q
